--- a/streak-frontend/dashboard.html
+++ b/streak-frontend/dashboard.html
@@ -420,6 +420,21 @@
         border: 2px solid var(--card-icon-inset, #9dcaba);
       }
 
+      .card-glyph {
+        width: 20px;
+        height: 20px;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .card-glyph svg,
+      .card-fire-canvas {
+        width: 100%;
+        height: 100%;
+        display: block;
+      }
+
       .card-name {
         display: block;
         margin: 0;
@@ -3363,11 +3378,6 @@
         <p id="shareTitle" class="share-title">Share Streak</p>
         <p id="shareSubtitle" class="share-subtitle">Share as image card or text</p>
         <div class="share-grid">
-          <button type="button" class="share-btn" data-share-action="whatsapp">WhatsApp</button>
-          <button type="button" class="share-btn" data-share-action="facebook">Facebook</button>
-          <button type="button" class="share-btn" data-share-action="instagram">Instagram</button>
-          <button type="button" class="share-btn" data-share-action="telegram">Telegram</button>
-          <button type="button" class="share-btn" data-share-action="copy">Copy Text</button>
           <button type="button" class="share-btn" data-share-action="download">Download Card</button>
         </div>
         <button id="closeShareBtn" class="share-close" type="button">Close</button>
@@ -3549,6 +3559,11 @@
         share:
           '<svg viewBox="0 0 24 24" aria-hidden="true"><path d="M15 6l4-3m0 0v5m0-5h-5M10 14l9-9M5 12a3 3 0 1 0 0 6 3 3 0 0 0 0-6zm14 6a3 3 0 1 0 0 6 3 3 0 0 0 0-6z" fill="none" stroke="currentColor" stroke-width="1.9" stroke-linecap="round" stroke-linejoin="round"></path></svg>',
       });
+
+      const CARD_FIRE_LOTTIE_SRC = "./assets/lottie/Fire.json";
+      let cardFireAnimations = [];
+      let cardFireRenderToken = 0;
+      let dotLottieClassPromise = null;
 
       const sectionDashboard = document.getElementById("sectionDashboard");
       const sectionAdd = document.getElementById("sectionAdd");
@@ -4539,9 +4554,76 @@
         cardElement.style.setProperty("--stagger-delay", `${delay}ms`);
       }
 
+      function destroyCardFireAnimations() {
+        cardFireRenderToken += 1;
+        cardFireAnimations.forEach((animation) => {
+          if (animation && typeof animation.destroy === "function") {
+            try {
+              animation.destroy();
+            } catch (_error) {
+              // Ignore cleanup failures; fallback icon will still render.
+            }
+          }
+        });
+        cardFireAnimations = [];
+      }
+
+      function getDotLottieClass() {
+        if (!dotLottieClassPromise) {
+          dotLottieClassPromise = import("https://cdn.jsdelivr.net/npm/@lottiefiles/dotlottie-web/+esm")
+            .then((module) => module.DotLottie || null)
+            .catch((_error) => null);
+        }
+        return dotLottieClassPromise;
+      }
+
+      async function initCardFireAnimations() {
+        const iconNodes = Array.from(streakList.querySelectorAll(".card-fire-icon"));
+        if (!iconNodes.length) {
+          return;
+        }
+        const renderToken = cardFireRenderToken;
+        const DotLottie = await getDotLottieClass();
+        if (renderToken !== cardFireRenderToken) {
+          return;
+        }
+        if (!DotLottie) {
+          iconNodes.forEach((node) => {
+            node.innerHTML = ICON_SVGS.streak;
+          });
+          return;
+        }
+        iconNodes.forEach((node) => {
+          node.innerHTML = "";
+          const canvas = document.createElement("canvas");
+          canvas.className = "card-fire-canvas";
+          node.appendChild(canvas);
+          try {
+            const animation = new DotLottie({
+              canvas,
+              src: CARD_FIRE_LOTTIE_SRC,
+              autoplay: true,
+              loop: true,
+              layout: {
+                fit: "contain",
+                align: [0.5, 0.5],
+              },
+            });
+            cardFireAnimations.push(animation);
+          } catch (_error) {
+            node.innerHTML = ICON_SVGS.streak;
+          }
+        });
+      }
+
       function createIconNode(iconName, className = "btn-icon") {
         const node = document.createElement("span");
         node.className = className;
+        if (iconName === "streak" && className === "card-glyph") {
+          node.classList.add("card-fire-icon");
+          node.innerHTML = ICON_SVGS.streak;
+          return node;
+        }
         node.innerHTML = ICON_SVGS[iconName] || ICON_SVGS.streak;
         return node;
       }
@@ -6636,6 +6718,7 @@
       }
 
       function renderStreakList() {
+        destroyCardFireAnimations();
         streakList.innerHTML = "";
         const activeStreaks = getActiveStreaks();
         if (!activeStreaks.length) {
@@ -6650,6 +6733,7 @@
         activeStreaks.forEach((streak, index) => {
           streakList.appendChild(createStreakCard(streak, index));
         });
+        void initCardFireAnimations();
       }
 
       function createArchivedCard(streak, cardIndex = 0) {
